# cargo-dist-test

./: .gitmodules  Cargo.toml
crates/my-project/: Cargo.toml
wix/: main.wxs
