[package]
name = "cargo-dist-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cnpryer/cargo-dist-test"
authors = ["Chris Pryer <cnpryer@gmail.com>"]
description = "testing cargo-dist"

[package.metadata.wix]
upgrade-guid = "208ADB56-15F7-4186-AC8E-0D0F7F197543"
path-guid = "BAE9800A-1D88-4D41-AD47-9F8A64A89910"
license = false
eula = false

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
